# hardrod-qmc

./: .gitignore  CHANGELOG.md  CITATION.bib  LICENSE  Makefile  README.md  pyproject.toml
data/: README.md
docs/: 00_PROPOSAL.md  01_ARCHITECTURE_RATIONALE.md  02_HIGH_LEVEL_WORKFLOW.md  03_EQUATION_SOURCE_MAP.md  04_CURRENT_REPO_STATE.md  05_TIMELINE_AND_NAVIGATION.md  RN_BLOCK_DMC.md
docs/dmc/: README.md  method.md  transport_contract.md
docs/tables/: README.md  rn_grid_summary.csv  rn_seed_robustness_summary.csv  rn_validation_summary.csv
docs/validation/: README.md  RN_DMC_GATE_AUDIT.md
experiments/: 00_smoke_vmc.py  01_uniform_hard_rods_validation.py  02_estimator_cost_accuracy.py  02_trapped_vmc_smoke.py  03_trapped_vmc_diagnostic_grid.py  04_trapped_vmc_seed_stability.py  05_trapped_vmc_alpha_scan.py  06_plot_trapped_alpha_scan.py  README.md  trapped_vmc_common.py
experiments/anchors/: exact_tg_trap.py  hard_rod_lda.py  (+5 more)
notebooks/: README.md  homogeneous_ring_exact_grid_report.ipynb
results/: README.md
tests/: test_analysis_stability.py  test_blocking.py  test_breathing_initialization.py  test_correlated_error.py  test_energy_response.py  test_estimators.py  test_gate_correlated_error_split.py  test_grid_extent_dynamic.py  test_hard_rods.py  test_io_artifacts.py  test_progress.py  test_rn_artifacts.py  test_rn_block_engine.py  test_rn_block_ownership.py  test_rn_block_smoke.py  test_rn_release_runners.py  test_streaming_analysis.py  test_theory_hard_rods.py  test_timeseries_analysis.py  test_wavefunction_guides.py  test_weighted_estimators.py
(+266 files in other folders)
