[project]
name = "hardrod-dmc-thesis"
version = "0.1.0"
description = "QMC scaffold for trapped one-dimensional hard-rod bosons and excluded-volume LDA benchmarks."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dmc = [
  "numba>=0.59",
  "scipy>=1.11",
  "tqdm>=4.66",
]
dev = [
  "pyright>=1.1",
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "experiments", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
include = ["src", "experiments", "tests"]
exclude = ["operator", "results", "data", "notebooks"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
extraPaths = ["src"]
reportMissingTypeStubs = false
